--- a/src/app/auditor/auditorias/auditorias.component.html
+++ b/src/app/auditor/auditorias/auditorias.component.html
@@ -38,7 +38,7 @@
             <th>Estado</th>
             <th>Módulos</th>
             <th>Objetivo</th>
-            <th>Fecha Inicio</th>
+            <th>Fecha Creación</th>
             <th>Acciones</th>
           </tr>
         </thead>
@@ -52,7 +52,7 @@
               </td>
               <td>{{ getModulosTexto(auditoria.modulos) }}</td>
               <td>{{ auditoria.objetivo || '-' }}</td>
-              <td>{{ auditoria.fecha_inicio ? (auditoria.fecha_inicio | date:'short') : '-' }}</td>
+              <td>{{ auditoria.fecha_creacion  ? (auditoria.fecha_creacion | date:'short') : '-' }}</td>
               <td>
                 <a [routerLink]="['/auditor/auditorias', auditoria.id_auditoria]" class="btn-link">
                   Ver detalle
